Update the right wrap line color

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -11,7 +11,7 @@
 @syntax-background-color: @dark-gray;
 
 // Guide colors
-@syntax-wrap-guide-color: @dark-gray;
+@syntax-wrap-guide-color: lighten(@gray, 20%);
 @syntax-indent-guide-color: lighten(@gray, 40%);
 @syntax-invisible-character-color: @gray;
 
